--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -63,9 +63,13 @@ http {
                 include fastcgi_params;
                 fastcgi_param SCRIPT_FILENAME $fastcgi_script_name;
         }
-
-        location /index.php  {
+        
+        location ~* \.(gif|jpg|jpeg|png|css|js|ico)$ {
+    	       root /opt/projects/web/php/Ikouqin-Server;
+	}
+        location /  {
             root           /opt/projects/web/php/Ikouqin-Server;
+            try_files $uri  /index.php?$uri&$args;        
             fastcgi_pass   02.codingdie.com:9000;
 	    fastcgi_index index.php;
             fastcgi_param PATH_INFO $fastcgi_path_info;
@@ -74,6 +78,10 @@ http {
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;        
             include        fastcgi_params;
         }
+        location /tmpfile/~* {
+               index.html
+        }
+        
         # deny access to .htaccess files, if Apache's document root
         # concurs with nginx's on
         #
