--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,4 +1,5 @@
 
+
 user  root;
 worker_processes  1;
 
@@ -18,59 +19,26 @@ http {
     include       mime.types;
     default_type  application/octet-stream;
 
-    #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-    #                  '$status $body_bytes_sent "$http_referer" '
-    #                  '"$http_user_agent" "$http_x_forwarded_for"';
-
-    #access_log  logs/access.log  main;
-
     sendfile        on;
     #tcp_nopush     on;
 
-    #keepalive_timeout  0;
     keepalive_timeout  65;
-
-    #gzip  on;
 
     server {
         listen       80;
-        server_name  01.codingdie.com;
-
+        server_name  ikouqin.cn www.ikouqin.cn;
         #charset koi8-r;
-
-        #access_log  logs/host.access.log  main;
-
-        
-        #error_page  404              /404.html;
-
-        # redirect server error pages to the static page /50x.html
-        #
-        #error_page   500 502 503 504  /50x.html;
-        #location = /50x.html {
-        #    root   html;
-        #}
-
-        # proxy the PHP scripts to Apache listening on 127.0.0.1:80
-        #
-        #location ~ \.php$ {
-        #    proxy_pass   http://127.0.0.1;
-        #}
-
-        # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-        #
         location /status {
-                fastcgi_pass  02.codingdie.com:9000;
+                fastcgi_pass  127.0.0.1:9000;
                 include fastcgi_params;
                 fastcgi_param SCRIPT_FILENAME $fastcgi_script_name;
         }
-        
-        location ~* \.(gif|jpg|jpeg|png|css|js|ico)$ {
-    	       root /opt/projects/web/php/Ikouqin-Server;
+        root           /opt/projects/web/php/Ikouqin-Server;
+        location ~*\.(woff2||gif|jpg|jpeg|png|css|js|ico|woff)$ {
 	}
         location /  {
-            root           /opt/projects/web/php/Ikouqin-Server;
-            try_files $uri  /index.php?$uri&$args;        
-            fastcgi_pass   02.codingdie.com:9000;
+	    try_files $uri  /index.php?$uri&$args;        
+            fastcgi_pass  127.0.0.1:9000;
 	    fastcgi_index index.php;
             fastcgi_param PATH_INFO $fastcgi_path_info;
             fastcgi_split_path_info ^(.+\.php)(.*)$;
@@ -78,41 +46,76 @@ http {
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;        
             include        fastcgi_params;
         }
-        location /tmpfile/~* {
-               index.html
+        location ^~/tmpfile/ {
+         #   rewrite '/(.*)$'  http://storage.ikouqin.cn/$1 redirect;
         }
-        
-        # deny access to .htaccess files, if Apache's document root
-        # concurs with nginx's on
-        #
-        #location ~ /\.ht {
-        #    deny  all;
-        #}
     }
 
     server {
-    	 listen       8000;
-	 server_name  01.codingdie.com;
-	 location / {
-            root           /opt/projects/web/php/test;
-            fastcgi_pass   02.codingdie.com:9000;
-            fastcgi_index  index.php;
+    	 listen       80;
+	 server_name  ddfood.ikouqin.cn ddfood.pickme.cn;
+         location /status {
+                fastcgi_pass  127.0.0.1:9000;
+                include fastcgi_params;
+                fastcgi_param SCRIPT_FILENAME $fastcgi_script_name;
+        }
+
+        root /opt/projects/web/php/DDfood;
+        location ~*\.(woff2||gif|jpg|jpeg|png|css|js|ico|woff)$ {
+        }
+        location /  {
+            try_files $uri  /index.php?$uri&$args;
+            fastcgi_pass  127.0.0.1:9000;
+            fastcgi_index index.php;
+            fastcgi_param PATH_INFO $fastcgi_path_info;
+            fastcgi_split_path_info ^(.+\.php)(.*)$;
+            fastcgi_param PATH_TRANSLATED $document_root$fastcgi_path_info;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
             include        fastcgi_params;
         }
-    }
-    # another virtual host using mix of IP-, name-, and port-based configuration
-    #
-    #server {
-    #    listen       8000;
-    #    listen       somename:8080;
-    #    server_name  somename  alias  another.alias;
+        location ^~/tmpfile/ {
+        #    rewrite '/(.*)$'  http://storage.ddfood.pickme.cn/$1 redirect;
+        }    
+      }
 
-    #    location / {
-    #        root   html;
-    #        index  index.html index.htm;
-    #    }
-    #}
+     server {
+         listen       80;
+         server_name  quanmingyuedu.ikouqin.cn quanmingyuedu.pickme.cn;
+         location /status {
+                fastcgi_pass  127.0.0.1:9000;
+                include fastcgi_params;
+                fastcgi_param SCRIPT_FILENAME $fastcgi_script_name;
+        }
+
+        root          /opt/projects/web/php/QuanMingYuedu;
+        location ~*\.(mp3|woff2||gif|jpg|jpeg|png|css|js|ico|woff)$ {
+        }
+        location /  {
+            try_files $uri  /index.php?$uri&$args;
+            fastcgi_pass  127.0.0.1:9000;
+            fastcgi_index index.php;
+            fastcgi_param PATH_INFO $fastcgi_path_info;
+            fastcgi_split_path_info ^(.+\.php)(.*)$;
+            fastcgi_param PATH_TRANSLATED $document_root$fastcgi_path_info;
+            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+            include        fastcgi_params;
+        }
+        location ^~/tmpfile/ {
+        #   rewrite '/(.*)$'  http://storage.ddfood.pickme.cn/$1 redirect;
+        }
+      }
+     server {
+        listen       80;
+        server_name  www.pickme.cn pickme.cn;
+        root          /opt/projects/web/java/pickme;
+        location ~*\.(woff2||gif|jpg|jpeg|png|css|js|ico|woff)$ {
+        }
+        location /  {
+          proxy_pass  http://127.0.0.1:8080;
+	}
+      }
+
+
 
 
     # HTTPS server
